fix: removed align-items: center from .grid-about-container class

--- a/style/style.css
+++ b/style/style.css
@@ -74,7 +74,7 @@ section h3{
     grid-template-rows: 1fr;
     /*grid-column-gap: 15vw;*/
     grid-row-gap: 3vh;
-    align-items: center;
+    /*align-items: center;*/
     justify-content: center;
     align-content: center;
 }
